crates/arwen-macho/tests/snapshots/macho_tests__change_dylib_id-2.snap
---
source: crates/arwen-macho/tests/macho_tests.rs
expression: changed_macho.name
---
Some(
    "very_very_very_very_very_very_very_longid.dylib",
)
