crates/arwen-macho/tests/snapshots/macho_tests__change_dylib_id.snap
---
source: crates/arwen-macho/tests/macho_tests.rs
expression: changed_macho
---
MachO {
    header: Header {
        magic: 0xfeedfacf,
        cputype: 16777228,
        cpusubtype: 0x0,
        filetype: "DYLIB",
        ncmds: 15,
        sizeofcmds: 1000,
        flags: 0x100085,
        reserved: 0x0,
    },
    load_commands: [
        LoadCommand {
            offset: 32,
            command: Segment64(
                SegmentCommand64 {
                    cmd: 25,
                    cmdsize: 392,
                    segname: [
                        95,
                        95,
                        84,
                        69,
                        88,
                        84,
                        0,
                        0,
                        0,
                        0,
                        0,
                        0,
                        0,
                        0,
                        0,
                        0,
                    ],
                    vmaddr: 0,
                    vmsize: 16384,
                    fileoff: 0,
                    filesize: 16384,
                    maxprot: 5,
                    initprot: 5,
                    nsects: 4,
                    flags: 0,
                },
            ),
        },
        LoadCommand {
            offset: 424,
            command: Segment64(
                SegmentCommand64 {
                    cmd: 25,
                    cmdsize: 152,
                    segname: [
                        95,
                        95,
                        68,
                        65,
                        84,
                        65,
                        95,
                        67,
                        79,
                        78,
                        83,
                        84,
                        0,
                        0,
                        0,
                        0,
                    ],
                    vmaddr: 16384,
                    vmsize: 16384,
                    fileoff: 16384,
                    filesize: 16384,
                    maxprot: 3,
                    initprot: 3,
                    nsects: 1,
                    flags: 16,
                },
            ),
        },
        LoadCommand {
            offset: 576,
            command: Segment64(
                SegmentCommand64 {
                    cmd: 25,
                    cmdsize: 72,
                    segname: [
                        95,
                        95,
                        76,
                        73,
                        78,
                        75,
                        69,
                        68,
                        73,
                        84,
                        0,
                        0,
                        0,
                        0,
                        0,
                        0,
                    ],
                    vmaddr: 32768,
                    vmsize: 16384,
                    fileoff: 32768,
                    filesize: 587,
                    maxprot: 1,
                    initprot: 1,
                    nsects: 0,
                    flags: 0,
                },
            ),
        },
        LoadCommand {
            offset: 648,
            command: IdDylib(
                DylibCommand {
                    cmd: 13,
                    cmdsize: 72,
                    dylib: Dylib {
                        name: 24,
                        timestamp: 1,
                        current_version: 0,
                        compatibility_version: 0,
                    },
                },
            ),
        },
        LoadCommand {
            offset: 720,
            command: DyldChainedFixups(
                LinkeditDataCommand {
                    cmd: 2147483700,
                    cmdsize: 16,
                    dataoff: 32768,
                    datasize: 88,
                },
            ),
        },
        LoadCommand {
            offset: 736,
            command: DyldExportsTrie(
                LinkeditDataCommand {
                    cmd: 2147483699,
                    cmdsize: 16,
                    dataoff: 32856,
                    datasize: 16,
                },
            ),
        },
        LoadCommand {
            offset: 752,
            command: Symtab(
                SymtabCommand {
                    cmd: 2,
                    cmdsize: 24,
                    symoff: 32880,
                    nsyms: 2,
                    stroff: 32920,
                    strsize: 24,
                },
            ),
        },
        LoadCommand {
            offset: 776,
            command: Dysymtab(
                DysymtabCommand {
                    cmd: 11,
                    cmdsize: 80,
                    ilocalsym: 0,
                    nlocalsym: 0,
                    iextdefsym: 0,
                    nextdefsym: 1,
                    iundefsym: 1,
                    nundefsym: 1,
                    tocoff: 0,
                    ntoc: 0,
                    modtaboff: 0,
                    nmodtab: 0,
                    extrefsymoff: 0,
                    nextrefsyms: 0,
                    indirectsymoff: 32912,
                    nindirectsyms: 2,
                    extreloff: 0,
                    nextrel: 0,
                    locreloff: 0,
                    nlocrel: 0,
                },
            ),
        },
        LoadCommand {
            offset: 856,
            command: Uuid(
                UuidCommand {
                    cmd: 27,
                    cmdsize: 24,
                    uuid: [
                        226,
                        59,
                        72,
                        180,
                        29,
                        233,
                        51,
                        244,
                        174,
                        230,
                        45,
                        234,
                        134,
                        180,
                        48,
                        141,
                    ],
                },
            ),
        },
        LoadCommand {
            offset: 880,
            command: BuildVersion(
                BuildVersionCommand {
                    cmd: 50,
                    cmdsize: 32,
                    platform: 1,
                    minos: 851968,
                    sdk: 851968,
                    ntools: 1,
                },
            ),
        },
        LoadCommand {
            offset: 912,
            command: SourceVersion(
                SourceVersionCommand {
                    cmd: 42,
                    cmdsize: 16,
                    version: 0,
                },
            ),
        },
        LoadCommand {
            offset: 928,
            command: LoadDylib(
                DylibCommand {
                    cmd: 12,
                    cmdsize: 56,
                    dylib: Dylib {
                        name: 24,
                        timestamp: 2,
                        current_version: 86467587,
                        compatibility_version: 65536,
                    },
                },
            ),
        },
        LoadCommand {
            offset: 984,
            command: FunctionStarts(
                LinkeditDataCommand {
                    cmd: 38,
                    cmdsize: 16,
                    dataoff: 32872,
                    datasize: 8,
                },
            ),
        },
        LoadCommand {
            offset: 1000,
            command: DataInCode(
                LinkeditDataCommand {
                    cmd: 41,
                    cmdsize: 16,
                    dataoff: 32880,
                    datasize: 0,
                },
            ),
        },
        LoadCommand {
            offset: 1016,
            command: CodeSignature(
                LinkeditDataCommand {
                    cmd: 29,
                    cmdsize: 16,
                    dataoff: 32944,
                    datasize: 411,
                },
            ),
        },
    ],
    segments: Segments {
        segments: [
            Segment {
                cmd: 25,
                cmdsize: 392,
                segname: "__TEXT",
                vmaddr: 0,
                vmsize: 16384,
                fileoff: 0,
                filesize: 16384,
                maxprot: 5,
                initprot: 5,
                nsects: 4,
                flags: 0,
                data: 16384,
                sections(): Ok(
                    [
                        Section {
                            sectname: "__text",
                            segname: "__TEXT",
                            addr: 16244,
                            size: 28,
                            offset: 16244,
                            align: 2,
                            reloff: 0,
                            nreloc: 0,
                            flags: 2147484672,
                        },
                        Section {
                            sectname: "__stubs",
                            segname: "__TEXT",
                            addr: 16272,
                            size: 12,
                            offset: 16272,
                            align: 2,
                            reloff: 0,
                            nreloc: 0,
                            flags: 2147484680,
                        },
                        Section {
                            sectname: "__cstring",
                            segname: "__TEXT",
                            addr: 16284,
                            size: 25,
                            offset: 16284,
                            align: 0,
                            reloff: 0,
                            nreloc: 0,
                            flags: 2,
                        },
                        Section {
                            sectname: "__unwind_info",
                            segname: "__TEXT",
                            addr: 16312,
                            size: 72,
                            offset: 16312,
                            align: 2,
                            reloff: 0,
                            nreloc: 0,
                            flags: 0,
                        },
                    ],
                ),
            },
            Segment {
                cmd: 25,
                cmdsize: 152,
                segname: "__DATA_CONST",
                vmaddr: 16384,
                vmsize: 16384,
                fileoff: 16384,
                filesize: 16384,
                maxprot: 3,
                initprot: 3,
                nsects: 1,
                flags: 16,
                data: 16384,
                sections(): Ok(
                    [
                        Section {
                            sectname: "__got",
                            segname: "__DATA_CONST",
                            addr: 16384,
                            size: 8,
                            offset: 16384,
                            align: 3,
                            reloff: 0,
                            nreloc: 0,
                            flags: 6,
                        },
                    ],
                ),
            },
            Segment {
                cmd: 25,
                cmdsize: 72,
                segname: "__LINKEDIT",
                vmaddr: 32768,
                vmsize: 16384,
                fileoff: 32768,
                filesize: 587,
                maxprot: 1,
                initprot: 1,
                nsects: 0,
                flags: 0,
                data: 587,
                sections(): Ok(
                    [],
                ),
            },
        ],
    },
    entry: 0,
    old_style_entry: false,
    libs: [
        "very_very_very_very_very_very_very_longid.dylib",
        "/usr/lib/libSystem.B.dylib",
    ],
    name: Some(
        "very_very_very_very_very_very_very_longid.dylib",
    ),
    little_endian: true,
    is_64: true,
    symbols(): [
        Ok(
            (
                "_hello",
                Nlist {
                    n_strx: 2,
                    n_type: 15,
                    n_sect: 1,
                    n_desc: 0,
                    n_value: 16244,
                },
            ),
        ),
        Ok(
            (
                "_printf",
                Nlist {
                    n_strx: 9,
                    n_type: 1,
                    n_sect: 0,
                    n_desc: 256,
                    n_value: 0,
                },
            ),
        ),
    ],
    exports(): Ok(
        [
            Export {
                name: "_hello",
                info: Regular {
                    address: 16244,
                    flags: 0,
                },
                size: 0,
                offset: 16244,
            },
        ],
    ),
    imports(): Ok(
        [],
    ),
}
