crates/arwen-macho/tests/snapshots/macho_tests__change_dylib_name@hello_with_rpath-2.snap
---
source: crates/arwen-macho/tests/macho_tests.rs
expression: changed_macho.libs
---
[
    "self",
    "very_very_very_very_very_very_very_longid",
]
