crates/arwen-macho/tests/snapshots/macho_tests__change_dylib_name@ls-2.snap
---
source: crates/arwen-macho/tests/macho_tests.rs
expression: changed_macho.libs
---
[
    "self",
    "/usr/lib/libncurses.5.4.dylib",
    "/usr/lib/libutil.dylib",
    "very_very_very_very_very_very_very_longid",
]
